# src/shared/infra/http/routes/index.ts
@@ -5,6 +5,7 @@ import { specificationsRoutes } from "./specifications.routes";
 import { usersRoutes } from "./users.routes";
 import { carsRoutes } from "./cars.routes";
 import { rentalsRoutes } from "./rentals.routes";
+import { passwordRoutes } from "./password.routes";
 
 const router = Router();
 
@@ -13,6 +14,7 @@ router.use("/specifications", specificationsRoutes);
 router.use("/users", usersRoutes);
 router.use("/cars", carsRoutes);
 router.use("/rentals", rentalsRoutes);
+router.use("/password", passwordRoutes);
 router.use(authenticateRoutes);
 
 export { router };
